--- a/index.html
+++ b/index.html
@@ -85,23 +85,31 @@
                 <ul class="team-person list">
                     <li class="team-list ">
                         <img class="avatar" src="./images/person1.jpg" alt="Ігор Дем'яненко" width="270">
-                        <h3 class="team-name">Ігор Дем'яненко</h3>
-                        <p class="team-position" lang="en">Product Designer</p>
+                        <div class="our-team">
+                            <h3 class="team-name">Ігор Дем'яненко</h3>
+                            <p class="team-position" lang="en">Product Designer</p>
+                        </div>
                     </li>
                     <li class="team-list ">
                         <img class="avatar" src="./images/person2.jpg" alt="Ольга Рєпіна" width="270">
-                        <h3 class="team-name">Ольга Рєпіна</h3>
-                        <p class="team-position" lang="en">Frontend Developer</p>
+                        <div class="our-team">
+                            <h3 class="team-name">Ольга Рєпіна</h3>
+                            <p class="team-position" lang="en">Frontend Developer</p>
+                        </div>
                     </li>
                     <li class="team-list ">
                         <img class="avatar" src="./images/person3.jpg" alt="Ольга Рєпіна" width="270">
-                        <h3 class="team-name">Микола Тарасов</h3>
-                        <p class="team-position" lang="en">Marketing</p>
+                        <div class="our-team">
+                            <h3 class="team-name">Микола Тарасов</h3>
+                            <p class="team-position" lang="en">Marketing</p>
+                        </div>
                     </li>
                     <li class="team-list ">
                         <img class="avatar" src="./images/person4.jpg" alt="Михайло Єрмаков" width="270">
-                        <h3 class="team-name">Михайло Єрмаков</h3>
-                        <p class="team-position" lang="en">UI Designer</p>
+                        <div class="our-team">
+                            <h3 class="team-name">Михайло Єрмаков</h3>
+                            <p class="team-position" lang="en">UI Designer</p>
+                        </div>
                     </li>
                 </ul>
             </div>
@@ -114,8 +122,8 @@
             <address class="address">
                 <p class="address-title">м. Київ, пр-т Лесі Українки, 26</p>
                 <ul class="list">
-                    <li><a class="footer-contact" href="mailto:">info@devstudio.com</a></li>
-                    <li><a class="footer-contact" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                    <li class="footer-link"><a class="footer-contact" href="mailto:">info@devstudio.com</a></li>
+                    <li class="footer-link"><a class="footer-contact" href="tel:+380961111111">+38 096 111 11 11</a></li>
                 </ul>
             </address>
         </div>
