--- a/portfolio.html
+++ b/portfolio.html
@@ -133,8 +133,8 @@
             <address class="address">
                 <p class="address-title">м. Київ, пр-т Лесі Українки, 26</p>
                 <ul class="list">
-                    <li><a class="footer-contact" href="mailto:">info@devstudio.com</a></li>
-                    <li><a class="footer-contact" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                    <li class="footer-link"><a class="footer-contact" href="mailto:">info@devstudio.com</a></li>
+                    <li class="footer-link"><a class="footer-contact" href="tel:+380961111111">+38 096 111 11 11</a></li>
                 </ul>
             </address>
         </div>
